syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option java_multiple_files = true;
option java_package = "group7.protobuf";
option java_outer_classname = "EventProto";

service EventService{
  rpc CreateEvent(CreateEventRequest) returns (CreateEventResponse){};
  rpc GetEvent(GetEventRequest) returns (GetEventResponse){};
  rpc BookEvent(BookEventRequest) returns (BookEventResponse){};
}
service UserService{
	  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse){};
}
message BookEventRequest{
	string userId = 1;
	string eventId = 2;
	string Date = 3;
	int32 NumerOfPeople = 4;
}
message BookEventResponse{
	string userId = 1;
	string eventId = 2;
	string Date = 3;
	int32 NumerOfPeople = 4;
	string id =5;
}
message CreateUserRequest{
	string FisrtName = 1;
	string LastName = 2;
	string Username = 3;
	string Email = 4;
	string Role = 5;
	string Password = 6;
}
message CreateUserResponse{
	string FisrtName = 1;
	string LastName = 2;
	string Username = 3;
	string Email = 4;
	string Role = 5;
	string Id = 6;
}
message CreateEventRequest{
	string name = 1;
	string description = 2;
	string Entertainer = 3;
	string CafeOwner = 4;
	string Date=5;
	int32 AvailablePlaces = 6;
}
message CreateEventResponse{
  string id = 1;
  string name = 2;
  string description = 3;
  string Entertainer = 4;
  	int32 AvailablePlaces = 5;
}
message GetEventRequest{
	string id = 1;
}
message GetEventResponse{
	string id = 1;
	string name = 2;
    string description = 3;
    string Entertainer = 4;
    string CafeOwner = 5;
	string Date=6;
}